<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dip" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/DTNManager_AboutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dip"
                android:drawableLeft="@drawable/big_launcher"
                android:text="@string/about" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/DTNManager_DTNServiceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="10dip"
            android:singleLine="true"
            android:text="@string/dtnServiceStopped" >
        </TextView>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginRight="5dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/DTNManager_StartStopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" >
            </Button>

            <Button
                android:id="@+id/DTNManager_RestartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/restart" >
            </Button>

            <Button
                android:id="@+id/DTNManager_EditConfigButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config" >
            </Button>

            <Button
                android:id="@+id/DTNManager_AppsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/apps" >
            </Button>

            <Button
                android:id="@+id/DTNManager_QuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit" >
            </Button>
        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/DTNManager_DebugLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/DTNManager_ResetStorageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/resetStorage" >
            </Button>

            <TextView
                android:id="@+id/DTNManager_BatteryStatusTextView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:text="@string/batteryRaw" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/DTNManager_StatusHeaderTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="10dip"
            android:text="@string/status" >
        </TextView>

        <TextView
            android:id="@+id/DTNManager_StorageConsumptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/storageConsumption" >
        </TextView>

        <TextView
            android:id="@+id/DTNManager_NoBundlesRegistrationsTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/noBundlesReg" >
        </TextView>

        <TextView
            android:id="@+id/DTNManager_NoBundlesUploadingDownloadingTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/noBundlesUpDown" >
        </TextView>

        <TextView
            android:id="@+id/DTNManager_NoActiveInterfacesLinksTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dip"
            android:text="@string/noActiveInterfaceLinks"
            android:visibility="gone" >
        </TextView>

        <TextView
            android:id="@+id/DTNManager_DTNConfigurationTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/dtnConfig" >
        </TextView>

        <TextView
            android:id="@+id/DTNManager_StorageTypeQuotaTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/storageType" >
        </TextView>

        <TextView
            android:id="@+id/DTNManager_StoragePathTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/storagePath" />

        <TextView
            android:id="@+id/DTNManager_InterfacesCaptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/interfaceSection" />

        <TextView
            android:id="@+id/DTNManager_InterfacesListTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="25dip"
            android:text="@string/interfaceList" />

        <TextView
            android:id="@+id/DTNManager_LinksCaptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/linkCaption" />

        <TextView
            android:id="@+id/DTNManager_LinksListTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="25dip"
            android:text="@string/linksList" />

        <TextView
            android:id="@+id/DTNManager_RoutesCaptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/routeSection" />

        <TextView
            android:id="@+id/DTNManager_RouteLocalEIDTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="25dip"
            android:text="@string/routeLocalEID" />

        <TextView
            android:id="@+id/DTNManager_RouterTypeTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="25dip"
            android:text="@string/routerType" />

        <TextView
            android:id="@+id/DTNManager_RoutesListTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="25dip"
            android:text="@string/destLink" />

        <TextView
            android:id="@+id/DTNManager_DiscoverySectionCaptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="15dip"
            android:text="@string/discSectionCaption" />

        <TextView
            android:id="@+id/DTNManager_DiscoveriesCaptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="25dip"
            android:text="@string/discoveries" />

        <TextView
            android:id="@+id/DTNManager_DiscoveriesListTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="35dip"
            android:text="@string/discoveryAddr" />

        <TextView
            android:id="@+id/DTNManager_AnnouncesCaptionTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="25dip"
            android:text="@string/discoveries" />

        <TextView
            android:id="@+id/DTNManager_AnnouncesListTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="35dip"
            android:text="@string/announcesList" />
    </LinearLayout>

</ScrollView>