<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/DTNApps_DTNSend_DestEIDCaptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/destEndpointID"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/DTNApps_DTNSend_DestEIDEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/defaultDestID_Send" >
    </EditText>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/DTNApps_DTNSend_SendButton"
            android:layout_width="130px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:text="@string/send" />

        <Button
            android:id="@+id/DTNApps_DTNSend_CloseButton"
            android:layout_width="130px"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DTNApps_DTNSend_SendButton"
            android:layout_marginLeft="220dp"
            android:text="@string/close" />
    </RelativeLayout>

    <TextView
        android:id="@+id/DTNApps_DTNSend_MessageCaptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/msgCaption"
        android:textSize="15sp" >
    </TextView>

    <EditText
        android:id="@+id/DTNApps_DTNSend_MessageTextView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:lines="6"
        android:inputType="textLongMessage">
    </EditText>

</LinearLayout>