<?xml version="1.0" encoding="utf-8"?>
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <EditText
                android:id="@+id/PingEndpointIdEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/endpointLabel" >
            </EditText>

            <Button
                android:id="@+id/DTNPingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:text="@string/ping" >
            </Button>
        </TableRow>

        <TableRow>
        </TableRow>

        <TextView
            android:id="@+id/ResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultHere" />

    </TableLayout>